--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ networks:
 
 services:
   n8n:
+    container_name: $COMPOSE_PROJECT_NAME
     image: docker.n8n.io/n8nio/n8n
     restart: unless-stopped
     environment:
