Set EXECUTIONS_PROCESS=main to improve latency.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - WEBHOOK_URL=https://${DOMAIN}/
       - GENERIC_TIMEZONE=${GENERIC_TIMEZONE}
       - NODE_FUNCTION_ALLOW_EXTERNAL=uuid
+      - EXECUTIONS_PROCESS=main
     volumes:
       - ./volumes/n8n:/home/node/.n8n
     labels:
